--- a/carzone_app/templates/base/footer.html
+++ b/carzone_app/templates/base/footer.html
@@ -1,6 +1,6 @@
 
 <!-- Footer start -->
-<footer class="footer">
+<footer class="footer position-sticky sticky-bottom">
     
     <div class="sub-footer">
         <div class="container">
