--- a/carzone_app/templates/pages/search.html
+++ b/carzone_app/templates/pages/search.html
@@ -55,7 +55,7 @@
                 {% endfor %}
             {% else %}
                 <div class="col-12">
-                    <p>No cars match your search criteria.</p>
+                    <h4 class=" text-center text-danger">No cars match your search criteria.</h4>
                 </div>
             {% endif %}
         </div>
