added add car feature

--- a/carzone_app/templates/pages/dashboard.html
+++ b/carzone_app/templates/pages/dashboard.html
@@ -48,6 +48,9 @@
 	  </tbody>
 	</table>
 </div>
+<div class="text-right mb-3 col-md-12">
+    <a href="{% url 'add_car' %}" class="btn btn-success">Sell Your Car</a>
+</div>
 
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
