--- a/carzone_app/templates/base/navbar.html
+++ b/carzone_app/templates/base/navbar.html
@@ -40,7 +40,7 @@
                     <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'search' %}">
                         <input class="form-control mr-sm-2" type="search" name="keyword" placeholder="Search cars..."
                             aria-label="Search" required>
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+                        <button class="btn btn-danger my-2 my-sm-0" type="submit">
                             <i class="fa fa-search"></i>
                         </button>
                     </form>
